test/domains/userAPI/orderIndex-empty.chpl

var DR: domain(3);
writeln(DR.orderToIndex(3));
